Added About Section and Skills

--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -4,6 +4,10 @@
         padding-top: 2%;
     }
 
+    .nab-bgg{
+        background-color:white ;
+    }
+
     .navbar-text{
         color:#66FCF1;
         font-family: 'Permanent Marker', cursive;
